# ofc

./: .gitignore  .goreleaser.yaml  BLUEPRINT.md  BUILDING-BLOCKS.md  FURNITURE.md  LICENSE  PROTOCOL.md  README.md  ROADMAP.md  go.work  go.work.sum
cli/: go.mod  go.sum  main.go
cli/acp/: client.go  session.go  terminal.go
cli/blueprint/: blueprint.go
cli/cmd/: init.go  root.go  run.go
cli/floor/: api.go  api_test.go  cli.go  controller.go  controller_test.go  coordinator.go  events.go  floor.go  frontend.go  output.go  runner.go  tui.go
cli/furniture/: externalmcp.go  externalmcp_test.go  furniture.go  mcpwrap.go  mcpwrap_test.go  taskboard.go  taskboard_test.go
cli/llm/: client.go
cli/sandbox/: sandbox.go
examples/acp-test/: blueprint.yaml  parse_blueprint.py
examples/acp-test/workspace/: README.md  fib.clj  sales.csv
examples/chaindepth/: blueprint.yaml
examples/data-analysis/: blueprint.yaml
examples/data-analysis/sandbox/: Dockerfile
examples/everything/: blueprint.yaml
examples/taskboard/: blueprint.yaml
examples/taskboard-acp/: blueprint.yaml
examples/taskboard-acp/workspace/: countdown.py
history/: FLOOR-ZERO.md  SPECS.md  code-only.yaml
history/first-run/: revenue_plot.html
python/: pyproject.toml
python/chatroom/: __init__.py  agents.py  config.py  llm.py  main.py  models.py  sandbox.py  ui.py
python/ofc/: __init__.py  blueprint.py  cli.py  floor.py
site/: index.html
